Fixed horizontal scroll issue

--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -316,6 +316,8 @@ html {
         }
         
         .documentation {
+            width: 100%;
+            box-sizing: border-box;
             padding: 0 calc(182px + 5%) 20px 5%
         }
 
